--- a/angular.json
+++ b/angular.json
@@ -116,6 +116,7 @@
     }
   },
   "cli": {
-    "analytics": false
+    "analytics": false,
+    "schematicCollections": ["@ngrx/schematics"]
   }
 }
