--- a/angular.json
+++ b/angular.json
@@ -71,6 +71,20 @@
                   "with": "src/environments/environment.dev.ts"
                 }
               ]
+            },
+            "mock": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.mock.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -83,6 +97,9 @@
             },
             "development": {
               "browserTarget": "AngularTemplate:build:development"
+            },
+            "mock": {
+              "browserTarget": "AngularTemplate:build:mock"
             }
           },
           "defaultConfiguration": "development"
